@@ -1,45 +1,45 @@
 import time
 
-day_name = ['Monday', 'Tuesday', 'Wednesday', 'Thursday', 'Friday',
-	    'Saturday', 'Sunday']
+day_name = [_('Monday'), _('Tuesday'), _('Wednesday'), _('Thursday'), _('Friday'),
+	    _('Saturday'), _('Sunday')]
 
-month_name = ['January', 'February', 'March', 'April',
-	      'May', 'June', 'July', 'August',
-	      'September', 'October', 'November', 'December']
+month_name = [_('January'), _('February'), _('March'), _('April'),
+	      _('May'), _('June'), _('July'), _('August'),
+	      _('September'), _('October'), _('November'), _('December')]
 
-about_message = ['nearly', 'nearly', 'about', 'just gone', 'just gone']
+about_message = [_('nearly'), _('nearly'), _('about'), _('just gone'), _('just gone')]
 
-section_name = ['', 'five past ', 'ten past ', 'a quarter past ',
-	        'twenty past ', 'twenty-five past ', 'half past ',
-		'twenty-five to ', 'twenty to ', 'a quarter to ',
-		'ten to ', 'five to ']
+section_name = ['', _('five past '), _('ten past '), _('a quarter past '),
+	        _('twenty past '), _('twenty-five past '), _('half past '),
+		_('twenty-five to '), _('twenty to '), _('a quarter to '),
+		_('ten to '), _('five to ')]
 
-number = [None, 'one', 'two', 'three', 'four', 'five', 'six', 'seven', 'eight',
-	  'nine', 'ten', 'eleven']
+number = [None, _('one'), _('two'), _('three'), _('four'), _('five'), _('six'),
+	   _('seven'), _('eight'), _('nine'), _('ten'), _('eleven')]
 
 def hour_name(hour):
 	assert hour >= 0 and hour < 24
 
 	if hour == 0:
-		return "midnight"
+		return _("midnight")
 	elif hour == 12:
-		return "noon"
+		return _("noon")
 	return number[hour % 12]
 
 def th(n):
 	"Cardinal integer to ordinal string."
 	if n > 3 and n < 20:
-		return "%dth" % n
+		return _("%dth") % n
 
 	d = n % 10
 	if d == 1:
-		return "%dst" % n
+		return _("%dst") % n
 	elif d == 2:
-		return "%dnd" % n
+		return _("%dnd") % n
 	elif d == 3:
-		return "%drd" % n
+		return _("%drd") % n
 	else:
-		return "%dth" % n
+		return _("%dth") % n
 
 def rough_time(time_in_seconds):
 	"Convert a time (as returned by time()) to a string."
@@ -52,11 +52,11 @@ def rough_time(time_in_seconds):
 		hour = (hour + 1) % 24
 
 	if minute / 5 == 0 and hour != 0 and hour != 12:
-		o_clock = " o'clock"
+		o_clock = _(" o'clock")
 	else:
 		o_clock = ""
 
-	return "It's %s %s%s%s" % (about_message[minute % 5],
+	return _("It's %s %s%s%s") % (about_message[minute % 5],
 				   section_name[minute / 5],
 				   hour_name(hour), o_clock)
 
@@ -69,7 +69,7 @@ def str_time(hour = None, min = None):
 	if h == 0:
 		h = 12
 	if hour < 12:
-		am = 'am'
+		am = _('am')
 	else:
-		am = 'pm'
-	return '%s:%02d %s' % (h, min, am)
+		am = _('pm')
+	return _('%s:%02d %s') % (h, min, am)
